--- a/website_pinetwork_games_odoo/i18n/es.po
+++ b/website_pinetwork_games_odoo/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 14.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-01-12 23:05+0000\n"
-"PO-Revision-Date: 2026-01-12 23:05+0000\n"
+"POT-Creation-Date: 2026-01-28 21:11+0000\n"
+"PO-Revision-Date: 2026-01-28 21:11+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -483,11 +483,6 @@ msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
-msgid "4.- On OpenMainnet we will pay the 15th day of each month."
-msgstr "4.- En OpenMainnet vamos a pagar el día 15 de cada mes."
-
-#. module: website_pinetwork_games_odoo
-#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
 msgid ""
 "4.- This list will be updated each 1 minute, so after you save your Youtube "
 "video link, you should wait 1 minute to be added on the list."
@@ -535,28 +530,8 @@ msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
-msgid ""
-"5.- If you are a winner on OpenMainnet, you will earn according to the "
-"income of LatinChain Platform, and not less than the minimum payment to "
-"unlock the games. Current minimum payment is at"
-msgstr ""
-"5.- Si eres un ganador en OpenMainnet, vas a ganar acorde al ingreso de "
-"LatinChain Platform, y no menos que el pago mínimo para desbloquear los "
-"juegos. El pago mínimo actual está en"
-
-#. module: website_pinetwork_games_odoo
-#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
 msgid "5.- Winning in level 4, you will earn 12 points."
 msgstr "5.- Ganando en nivel 4, vas a ganar 12 puntos."
-
-#. module: website_pinetwork_games_odoo
-#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
-msgid ""
-"6.- Check in the Rules on latin-chain.com (Mainnet), to know the current "
-"minimum payment on our Mainnet server."
-msgstr ""
-"6.- Chequea en las Reglas en latin-chain.com (Mainnet), para conocer el pago"
-" mínimo actual en nuestro servidor de Mainnet."
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
@@ -840,6 +815,17 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "<br/>Video presentation:<br/><br/>"
 msgstr "<br/>Video presentación:<br/><br/>"
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "<i class=\"bi bi-check-circle-fill me-2\"/>Why Choose the Mainnet?"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "<i class=\"bi bi-rocket-takeoff-fill me-2\"/>Staking Pi to Boost Rank"
+msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.imgplayer
@@ -1145,6 +1131,11 @@ msgid ""
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "<small>Support us today and help LatinChain reach the top!</small>"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.chess
 msgid ""
 "<span class=\"1\">1</span>\n"
@@ -1384,9 +1375,9 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.radioforus
 msgid ""
 "<strong>\n"
-"                                                    <u>LatinChain Benefits:</u> Auto ads switch (ON or OFF), change Avatar, Pi Ads <i class=\"fa-solid fa-plug-circle-bolt\"/>x2 points, access to all Games, all dApps and functionalities in LatinChain Platform.\n"
+"                                                    <u>LatinChain Benefits:</u> Auto ads switch (ON/OFF), change Avatar, Pi Ads <i class=\"fa-solid fa-plug-circle-bolt\"/>x2 points, access to all Games, all dApps and functionalities in LatinChain Platform.\n"
 "                                                    <br/>\n"
-"                                                    <u>RadioForUs Benefits:</u> Auto ads switch (ON or OFF), access to all Music, all Radio stations, all dApps, and functionalities in RadioForUs.\n"
+"                                                    <u>RadioForUs Benefits:</u> Auto ads switch (ON/OFF), access to all Music, all Radio stations, all dApps and functionalities in RadioForUs.\n"
 "                                                    </strong>"
 msgstr ""
 
@@ -1571,6 +1562,14 @@ msgid "<strong>Domino</strong>"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid ""
+"<strong>Double Utility Bonus:</strong> Active usage on the Mainnet "
+"contributes to your Pi utility usage bonus."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
 msgid ""
 "<strong>Elephant (相 / 象):</strong> Moves 2 steps diagonally. Cannot cross "
@@ -1705,6 +1704,14 @@ msgid "<strong>Professionals</strong>"
 msgstr "<strong>Profesionales</strong>"
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid ""
+"<strong>Real Utility:</strong> Every action contributes to the genuine "
+"activity of the network."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
 msgid ""
 "<strong>River:</strong> Elephants cannot cross. Soldiers gain side movement "
@@ -1769,6 +1776,15 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.new_header_layout
 msgid "<strong>Translate</strong>"
 msgstr "<strong>Traducir</strong>"
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid ""
+"<strong>Verified Status:</strong> Users who choose to support the ecosystem "
+"via donations can unlock \"Verified\" status. This signals your commitment "
+"to the community."
+msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.certification
@@ -2041,6 +2057,15 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
 msgid "Business improvement"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid ""
+"By <strong>Staking Pi</strong> on our app within the Pi Browser, you help "
+"boost our ranking in the ecosystem directory. A higher rank means more "
+"visibility, bringing more Pioneers into our community and increasing the "
+"value of the network for everyone."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -2397,6 +2422,13 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.webcamplayer
 msgid "Developed with Gemini AI"
 msgstr "Desarrollado con Gemini AI"
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid ""
+"Did you know you can directly support the growth of <strong>LatinChain "
+"Mainnet</strong>?"
+msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
@@ -2827,6 +2859,12 @@ msgid "Holiday sales"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "How the LatinChain Token Works"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
 msgid "How to Play"
 msgstr ""
@@ -2878,6 +2916,7 @@ msgstr "No es una URL de video de youtube."
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.pinetwork
 msgid "JOIN MEXC AND TRADE PI"
 msgstr ""
 
@@ -2991,11 +3030,6 @@ msgstr ""
 "                                <br/>"
 
 #. module: website_pinetwork_games_odoo
-#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
-msgid "Last payment was on"
-msgstr "El último pago fue a las"
-
-#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latincrush
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
 msgid "Latin Crush"
@@ -3056,7 +3090,8 @@ msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_token_whitepaper
-msgid "LatinChain Token foundations"
+msgid ""
+"LatinChain Token foundations (This token isn't launched yet on Mainnet)"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -3080,10 +3115,19 @@ msgid "LatinChain dSocial: Video streaming."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid ""
+"LatinChain is designed to foster a digital economy within the Pi Browser. By"
+" participating in either network, you are helping to stress-test and improve"
+" a growing financial ecosystem."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid ""
 "LatinChain tech support by César OpenSource Expert: Software Engineer, "
-"Entrepreneur, Amazon Books Writter, Udemy Instructor, Spring Clothing "
+"Entrepreneur, Amazon Books Writer, Udemy Instructor, Spring Clothing "
 "Designer and Youtuber."
 msgstr ""
 
@@ -3395,6 +3439,11 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "More Info"
 msgstr "Más Info"
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "More info about staking, clicking here"
+msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.fifteen_puzzle
@@ -3827,6 +3876,7 @@ msgstr "Ganadores del Pi Hackathon"
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.pinetwork
 msgid "Pi KYB ready"
 msgstr ""
 
@@ -3858,20 +3908,6 @@ msgstr "Pi por 30 días desde hoy"
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "Pi username: <span translate=\"no\" class=\"referrer_username\"/>"
 msgstr "Nombre de usuario Pi: <span translate=\"no\" class=\"referrer_username\"/>"
-
-#. module: website_pinetwork_games_odoo
-#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
-msgid "Pi, or much more, depending on the income."
-msgstr "Pi, ó mucho más, dependiendo del ingreso."
-
-#. module: website_pinetwork_games_odoo
-#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
-msgid ""
-"Pi, so you will earn not less than that. In a good situation we could pay "
-"the triple of minimum payment:"
-msgstr ""
-"Pi, así que vas a ganar no menos que eso. En una buena situación podríamos "
-"pagar el triple del pago mínimo:"
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
@@ -4329,6 +4365,12 @@ msgid "Select Voice:"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "Select an option above to begin your journey."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.musicplayer
 msgid "Select audio file"
 msgstr ""
@@ -4432,12 +4474,15 @@ msgstr "Sports: Resultados del Fútbol."
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
-msgid "Stake Pi to Boost Rank of LatinChain Mainnet"
+msgid ""
+"Stake 1000 Pi during 365 days (any amount and time is permitted, we thank "
+"you) to Boost Rank of your favorite Pi App: LatinChain Mainnet on Pi "
+"Ecosystem, by clicking here"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
-msgid "Stake Pi to Boost Rank of LatinChain Testnet"
+msgid "Stake Pi to Boost Rank"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -4642,6 +4687,16 @@ msgid "Thank you very much!."
 msgstr "Muchas gracias!."
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid ""
+"The LatinChain Mainnet (<code>latinchain.pinet.com</code>) is the live "
+"production environment where real value is exchanged. By accessing the "
+"Mainnet, you are interacting with the fully operational version of our "
+"blockchain application."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.calendarplayer
 msgid ""
 "The Mayan Long Count calendar consists of cycles: <span "
@@ -4657,6 +4712,23 @@ msgstr ""
 msgid ""
 "The Mayan calendar is cyclic. Each cycle consists of 13 Baktuns "
 "(approximately 5,125 years)."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "The Role of the Testnet"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid ""
+"The Testnet serves as our sandbox environment. It is designed for users who "
+"want to explore new features, test transaction flows, or understand the "
+"mechanics of the <strong>LatinChain token</strong> without using real Pi. It"
+" is the perfect training ground for new pioneers to get comfortable with "
+"Web3 interactions before moving to the Mainnet."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -4819,11 +4891,6 @@ msgid "USD"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
-#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
-msgid "UTC, next payment will be the 15th day of next month."
-msgstr "UTC, el próximo pago será el día 15 del siguiente mes."
-
-#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.askanexpert
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.certification
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.partners
@@ -4875,6 +4942,12 @@ msgstr "Desbloquea LatinChain yendo al botón Donar."
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.snake
 msgid "Unblock with"
 msgstr "Desbloquea con"
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "Understanding the LatinChain Ecosystem"
+msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
@@ -5036,9 +5109,9 @@ msgid ""
 "Get double utility usage bonus <i class=\"fa-solid fa-bolt\"/> by using both"
 " Mainnet and Testnet."
 msgstr ""
-"Estamos probando LatinChain Mainnet en el ecosistema de criptomonedas de Pi Network. "
-"Obtenga el doble de utility usage bonus <i class=\"fa-solid fa-bolt\"/> utilizando tanto"
-" Mainnet como Testnet."
+"Estamos probando LatinChain Mainnet en el ecosistema de criptomonedas de Pi "
+"Network. Obtenga el doble de utility usage bonus <i class=\"fa-solid fa-"
+"bolt\"/> utilizando tanto Mainnet como Testnet."
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
@@ -5087,6 +5160,18 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "Welcome to LatinChain!."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid ""
+"Welcome to the LatinChain Ecosystem portal. As a decentralized application "
+"(dApp) built on the <strong>Pi Network</strong>, our goal is to provide real"
+" utility and seamless interaction for the Pi community. Whether you are a "
+"developer, a pioneer, or a casual user, understanding the difference between"
+" our Mainnet and Testnet environments is crucial for maximizing your "
+"experience."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -5190,7 +5275,7 @@ msgstr "Puedes consultar esta certificación en:<br/><br/>"
 msgid ""
 "You can find these, our most notable books by ASIN or ISBN, in bookstores as"
 " Amazon (globally), Iberlibro (Europe) or others around the world. There are"
-" also courses available."
+" also courses available. Shipping worldwide."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -5353,6 +5438,12 @@ msgstr ""
 msgid ""
 "Your final score is: <span id=\"finalScore\" class=\"font-bold text-"
 "pink-500\">0</span>"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "Your gateway to decentralized applications on the Pi Network."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
