--- a/website_pinetwork_games_odoo/i18n/website_pinetwork_games_odoo.pot
+++ b/website_pinetwork_games_odoo/i18n/website_pinetwork_games_odoo.pot
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 14.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-01-12 23:05+0000\n"
-"PO-Revision-Date: 2026-01-12 23:05+0000\n"
+"POT-Creation-Date: 2026-01-28 21:10+0000\n"
+"PO-Revision-Date: 2026-01-28 21:10+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -443,11 +443,6 @@ msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
-msgid "4.- On OpenMainnet we will pay the 15th day of each month."
-msgstr ""
-
-#. module: website_pinetwork_games_odoo
-#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
 msgid ""
 "4.- This list will be updated each 1 minute, so after you save your Youtube "
 "video link, you should wait 1 minute to be added on the list."
@@ -486,22 +481,7 @@ msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
-msgid ""
-"5.- If you are a winner on OpenMainnet, you will earn according to the "
-"income of LatinChain Platform, and not less than the minimum payment to "
-"unlock the games. Current minimum payment is at"
-msgstr ""
-
-#. module: website_pinetwork_games_odoo
-#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
 msgid "5.- Winning in level 4, you will earn 12 points."
-msgstr ""
-
-#. module: website_pinetwork_games_odoo
-#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
-msgid ""
-"6.- Check in the Rules on latin-chain.com (Mainnet), to know the current "
-"minimum payment on our Mainnet server."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -760,6 +740,17 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "<br/>Video presentation:<br/><br/>"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "<i class=\"bi bi-check-circle-fill me-2\"/>Why Choose the Mainnet?"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "<i class=\"bi bi-rocket-takeoff-fill me-2\"/>Staking Pi to Boost Rank"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -1052,6 +1043,11 @@ msgid ""
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "<small>Support us today and help LatinChain reach the top!</small>"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.chess
 msgid ""
 "<span class=\"1\">1</span>\n"
@@ -1264,9 +1260,9 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.radioforus
 msgid ""
 "<strong>\n"
-"                                                    <u>LatinChain Benefits:</u> Auto ads switch (ON or OFF), change Avatar, Pi Ads <i class=\"fa-solid fa-plug-circle-bolt\"/>x2 points, access to all Games, all dApps and functionalities in LatinChain Platform.\n"
+"                                                    <u>LatinChain Benefits:</u> Auto ads switch (ON/OFF), change Avatar, Pi Ads <i class=\"fa-solid fa-plug-circle-bolt\"/>x2 points, access to all Games, all dApps and functionalities in LatinChain Platform.\n"
 "                                                    <br/>\n"
-"                                                    <u>RadioForUs Benefits:</u> Auto ads switch (ON or OFF), access to all Music, all Radio stations, all dApps, and functionalities in RadioForUs.\n"
+"                                                    <u>RadioForUs Benefits:</u> Auto ads switch (ON/OFF), access to all Music, all Radio stations, all dApps and functionalities in RadioForUs.\n"
 "                                                    </strong>"
 msgstr ""
 
@@ -1451,6 +1447,14 @@ msgid "<strong>Domino</strong>"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid ""
+"<strong>Double Utility Bonus:</strong> Active usage on the Mainnet "
+"contributes to your Pi utility usage bonus."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
 msgid ""
 "<strong>Elephant (相 / 象):</strong> Moves 2 steps diagonally. Cannot cross "
@@ -1583,6 +1587,14 @@ msgid "<strong>Professionals</strong>"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid ""
+"<strong>Real Utility:</strong> Every action contributes to the genuine "
+"activity of the network."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
 msgid ""
 "<strong>River:</strong> Elephants cannot cross. Soldiers gain side movement "
@@ -1646,6 +1658,15 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.new_header
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.new_header_layout
 msgid "<strong>Translate</strong>"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid ""
+"<strong>Verified Status:</strong> Users who choose to support the ecosystem "
+"via donations can unlock \"Verified\" status. This signals your commitment "
+"to the community."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -1911,6 +1932,15 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.reading_club
 msgid "Business improvement"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid ""
+"By <strong>Staking Pi</strong> on our app within the Pi Browser, you help "
+"boost our ranking in the ecosystem directory. A higher rank means more "
+"visibility, bringing more Pioneers into our community and increasing the "
+"value of the network for everyone."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -2266,6 +2296,13 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.webcamplayer
 msgid "Developed with Gemini AI"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid ""
+"Did you know you can directly support the growth of <strong>LatinChain "
+"Mainnet</strong>?"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -2673,6 +2710,12 @@ msgid "Holiday sales"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "How the LatinChain Token Works"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.xiangqi
 msgid "How to Play"
 msgstr ""
@@ -2722,6 +2765,7 @@ msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.pinetwork
 msgid "JOIN MEXC AND TRADE PI"
 msgstr ""
 
@@ -2833,11 +2877,6 @@ msgid ""
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
-#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
-msgid "Last payment was on"
-msgstr ""
-
-#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latincrush
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
 msgid "Latin Crush"
@@ -2891,7 +2930,8 @@ msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_token_whitepaper
-msgid "LatinChain Token foundations"
+msgid ""
+"LatinChain Token foundations (This token isn't launched yet on Mainnet)"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -2915,10 +2955,19 @@ msgid "LatinChain dSocial: Video streaming."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid ""
+"LatinChain is designed to foster a digital economy within the Pi Browser. By"
+" participating in either network, you are helping to stress-test and improve"
+" a growing financial ecosystem."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid ""
 "LatinChain tech support by César OpenSource Expert: Software Engineer, "
-"Entrepreneur, Amazon Books Writter, Udemy Instructor, Spring Clothing "
+"Entrepreneur, Amazon Books Writer, Udemy Instructor, Spring Clothing "
 "Designer and Youtuber."
 msgstr ""
 
@@ -3227,6 +3276,11 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "More Info"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "More info about staking, clicking here"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -3654,6 +3708,7 @@ msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.pinetwork
 msgid "Pi KYB ready"
 msgstr ""
 
@@ -3684,18 +3739,6 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
 msgid "Pi username: <span translate=\"no\" class=\"referrer_username\"/>"
-msgstr ""
-
-#. module: website_pinetwork_games_odoo
-#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
-msgid "Pi, or much more, depending on the income."
-msgstr ""
-
-#. module: website_pinetwork_games_odoo
-#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
-msgid ""
-"Pi, so you will earn not less than that. In a good situation we could pay "
-"the triple of minimum payment:"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -4145,6 +4188,12 @@ msgid "Select Voice:"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "Select an option above to begin your journey."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.musicplayer
 msgid "Select audio file"
 msgstr ""
@@ -4248,12 +4297,15 @@ msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
-msgid "Stake Pi to Boost Rank of LatinChain Mainnet"
+msgid ""
+"Stake 1000 Pi during 365 days (any amount and time is permitted, we thank "
+"you) to Boost Rank of your favorite Pi App: LatinChain Mainnet on Pi "
+"Ecosystem, by clicking here"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
-msgid "Stake Pi to Boost Rank of LatinChain Testnet"
+msgid "Stake Pi to Boost Rank"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -4458,6 +4510,16 @@ msgid "Thank you very much!."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid ""
+"The LatinChain Mainnet (<code>latinchain.pinet.com</code>) is the live "
+"production environment where real value is exchanged. By accessing the "
+"Mainnet, you are interacting with the fully operational version of our "
+"blockchain application."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.calendarplayer
 msgid ""
 "The Mayan Long Count calendar consists of cycles: <span "
@@ -4473,6 +4535,23 @@ msgstr ""
 msgid ""
 "The Mayan calendar is cyclic. Each cycle consists of 13 Baktuns "
 "(approximately 5,125 years)."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "The Role of the Testnet"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid ""
+"The Testnet serves as our sandbox environment. It is designed for users who "
+"want to explore new features, test transaction flows, or understand the "
+"mechanics of the <strong>LatinChain token</strong> without using real Pi. It"
+" is the perfect training ground for new pioneers to get comfortable with "
+"Web3 interactions before moving to the Mainnet."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -4626,11 +4705,6 @@ msgid "USD"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
-#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.rules
-msgid "UTC, next payment will be the 15th day of next month."
-msgstr ""
-
-#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.askanexpert
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.certification
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.partners
@@ -4679,6 +4753,12 @@ msgstr ""
 #. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.snake
 msgid "Unblock with"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "Understanding the LatinChain Ecosystem"
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -4890,6 +4970,18 @@ msgid "Welcome to LatinChain!."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid ""
+"Welcome to the LatinChain Ecosystem portal. As a decentralized application "
+"(dApp) built on the <strong>Pi Network</strong>, our goal is to provide real"
+" utility and seamless interaction for the Pi community. Whether you are a "
+"developer, a pioneer, or a casual user, understanding the difference between"
+" our Mainnet and Testnet environments is crucial for maximizing your "
+"experience."
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
 #: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.chess
 msgid "White"
 msgstr ""
@@ -4987,7 +5079,7 @@ msgstr ""
 msgid ""
 "You can find these, our most notable books by ASIN or ISBN, in bookstores as"
 " Amazon (globally), Iberlibro (Europe) or others around the world. There are"
-" also courses available."
+" also courses available. Shipping worldwide."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
@@ -5142,6 +5234,12 @@ msgstr ""
 msgid ""
 "Your final score is: <span id=\"finalScore\" class=\"font-bold text-"
 "pink-500\">0</span>"
+msgstr ""
+
+#. module: website_pinetwork_games_odoo
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.latinchain_mainnet_redirect
+#: model_terms:ir.ui.view,arch_db:website_pinetwork_games_odoo.mainpage
+msgid "Your gateway to decentralized applications on the Pi Network."
 msgstr ""
 
 #. module: website_pinetwork_games_odoo
